welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value String_of_Int
		ecritMessage(String_of_Int(j));
                             ^